import("//build_extra/rust/rust.gni")

group("default") {
  testonly = true
  deps = [
    ":hyper_hello",
    "cli:deno",
    "cli:test_rs",
    "core:default",
    "core/libdeno:test_cc",
  ]
}

rust_executable("hyper_hello") {
  source_root = "tools/hyper_hello.rs"
  extern = [
    "$rust_build:hyper",
    "$rust_build:ring",
  ]
}
